<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".GameActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="top|center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity=""
                />
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="top|center"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/timeactgame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:background="#F6B778"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:background="#BA936B"
                android:id="@+id/btnParent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn1"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    android:text="@string/_1"
                    android:textSize="25sp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn2"
                    android:text="@string/_2"
                    android:textSize="25sp"
                    android:layout_toEndOf="@+id/btn1"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn3"
                    android:text="@string/_3"
                    android:textSize="25sp"
                    android:layout_toEndOf="@+id/btn2"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn4"
                    android:text="@string/_4"
                    android:textSize="25sp"
                    android:layout_toEndOf="@+id/btn3"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn5"
                    android:text="@string/_5"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn1"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn6"
                    android:text="@string/_6"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn1"
                    android:layout_toEndOf="@+id/btn5"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn7"
                    android:text="@string/_7"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn1"
                    android:layout_toEndOf="@+id/btn6"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn8"
                    android:text="@string/_8"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn1"
                    android:layout_toEndOf="@+id/btn7"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn9"
                    android:text="@string/_9"
                    android:textSize="25sp"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:layout_below="@+id/btn5"
                    android:background="@drawable/background16" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn10"
                    android:text="@string/_10"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn6"
                    android:layout_toEndOf="@+id/btn9"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn11"
                    android:text="@string/_11"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn6"
                    android:layout_toEndOf="@+id/btn10"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn12"
                    android:text="@string/_12"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn6"
                    android:layout_toEndOf="@+id/btn11"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn13"
                    android:text="@string/_13"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn9"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn14"
                    android:text="@string/_14"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn9"
                    android:layout_toEndOf="@+id/btn9"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn15"
                    android:text="@string/_15"
                    android:textSize="25sp"
                    android:layout_below="@+id/btn9"
                    android:layout_toEndOf="@+id/btn10"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/background16"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn16"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:layout_below="@+id/btn12"
                    android:layout_toEndOf="@+id/btn11"
                    android:background="@drawable/bg_passive_btn"
                    android:text=""
                    android:textSize="25sp" />



            </RelativeLayout>

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/restartbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:background="@drawable/background_btn"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:background="@drawable/background_btn"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>