<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/ttt"
        android:background="#EBCF1313"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        >

        <TextView
            android:id="@+id/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/night_mode"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/themeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp" />
        <TextView
            android:id="@+id/music"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:layout_below="@+id/night"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginStart="100dp"
            />
        <CheckBox
            android:id="@+id/musicCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_below="@+id/themeCheck"
            />

    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="#EBCF1313"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ttt"
        android:layout_marginTop="50dp"
        />
    <ImageButton
        android:id="@+id/uz"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/uz"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        />
    <ImageButton
        android:id="@+id/en"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="200dp"
        android:layout_toEndOf="@+id/uz"
        android:background="@drawable/en"
        android:layout_marginTop="100dp"
        />

</RelativeLayout>